Fix navbar to work on mobile displays

--- a/index.css
+++ b/index.css
@@ -160,6 +160,10 @@ ul {
   background-color: #cc5e5e;
 }
 
+#contact-btn:active, .page-btn:active {
+  background-color: #cc5e5e;
+}
+
 .dropdown {
   display: none;
 }
@@ -192,6 +196,9 @@ ul {
   .dropdown:hover {
     background-color: #cc5e5e;
   }
+  .dropdown:active {
+    background-color: #cc5e5e;
+  }
   .dropdown-content {
     display: none;
     position: absolute;
@@ -207,7 +214,14 @@ ul {
     background-color: #F26666;
     color: white;
   }
+  .dropdown-content .dropdown-link:active {
+    background-color: #F26666;
+    color: white;
+  }
   .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .dropdown:active .dropdown-content {
     display: block;
   }
   #navbar {
